# soap

./: .env.example  .gitignore  README.md  project-context.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8f19ab8e77cf_create_users_table.py  a1b2c3d4e5f6_create_plans_and_subscriptions.py  b2c3d4e5f6g7_create_recordings_table.py  c3d4e5f6g7h8_create_notes_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  database.py  dependencies.py  exceptions.py  oauth.py  security.py
backend/app/models/: __init__.py  base.py  note.py  plan.py  recording.py  subscription.py  user.py
backend/app/routers/: auth.py  notes.py  plans.py  recordings.py  subscriptions.py
backend/app/schemas/: __init__.py  note.py  plan.py  recording.py  subscription.py  user.py
backend/app/services/: __init__.py  auth.py  deepgram.py  plan.py  soap_extraction.py  subscription.py
backend/app/services/llm/: __init__.py  azure_openai.py  base.py  factory.py  mistral.py
backend/app/services/llm/prompts/: __init__.py  soap_extraction.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_deepgram_service.py  test_dependencies.py  test_health.py  test_llm_service.py  test_note_model.py  test_notes_endpoint.py  test_plan.py  test_plans_endpoints.py  test_recordings.py  test_security.py  test_soap_e2e.py  test_soap_extraction_service.py  test_subscription.py  test_subscription_service.py  test_user_model.py
(+138 files in other folders)
