[project]
name = "soap-notice-backend"
version = "0.1.0"
description = "Backend API for SOAP Notice - Audio transcription for physiotherapists"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "SOAP Notice Team"}
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
